Fix (Header) z-index

--- a/assets/component-menu-popup.css
+++ b/assets/component-menu-popup.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    z-index: 2;
+    z-index: 3;
 }
 
 /* body.modal-open #shopify-section-promo-bar {
