--- a/assets/section-header.css
+++ b/assets/section-header.css
@@ -57,6 +57,7 @@ body.modal-open {
     /*z-index: 1;*/
 }
 
+
 .site-header__nav > ul {
     position: static;
     z-index: 2;
@@ -67,6 +68,10 @@ body.modal-open {
     padding: 0;
     margin: 0;
     font-size: 18px;
+}
+
+.site-header__nav .header__nav--full {
+    z-index: 3;
 }
 
 .site-header__dropdown {
